fix z-index issues

--- a/app/components/about.css
+++ b/app/components/about.css
@@ -13,7 +13,6 @@
   position: relative;
   padding: var(--header-height) 4rem 4rem 4rem;
   text-align: justify;
-  z-index: -1;
 }
 
 .aboutTitle {
@@ -23,7 +22,6 @@
   margin-top: 4rem;
   font-size: 36px;
   white-space: nowrap;
-  z-index: 1;
   opacity: 0;
   visibility: hidden;
   transition: opacity 5s ease-out;
@@ -37,7 +35,6 @@
 
 .aboutVideo {
   position: absolute;
-  z-index: 0;
   object-fit: contain;
   top: 0;
   width: calc(100% - 8rem);
@@ -53,7 +50,6 @@
   position: relative;
   font-size: 22px;
   line-height: 1.75;
-  z-index: 1;
 }
 
 .aboutPhoto {
