--- a/app/components/footer.css
+++ b/app/components/footer.css
@@ -14,7 +14,6 @@
   font-family: "EB Garamond";
   font-style: italic;
   margin-top: 8rem;
-  z-index: 1;
 }
 
 .footerContent {
