--- a/app/components/gallery.css
+++ b/app/components/gallery.css
@@ -32,7 +32,6 @@
   margin-top: 4rem;
   font-size: 36px;
   white-space: nowrap;
-  z-index: 1;
   opacity: 0;
   visibility: hidden;
   transition: opacity 5s ease-out;
@@ -46,7 +45,6 @@
 
 .galleryVideo {
   position: absolute;
-  z-index: 0;
   object-fit: contain;
   bottom: 0;
   width: calc(100% - 8rem);
@@ -60,7 +58,6 @@
 
 .galleryVideo {
   position: absolute;
-  z-index: 0;
   object-fit: contain;
   top: 0;
   width: calc(100% - 8rem);
@@ -70,7 +67,6 @@
   position: relative;
   font-size: 28px;
   line-height: 1.75;
-  z-index: 1;
   margin: 1rem 0;
 }
 
