--- a/app/components/galleryOverlay.css
+++ b/app/components/galleryOverlay.css
@@ -1,7 +1,6 @@
 .galleryOverlay {
   position: absolute;
   right: 100vw;
-  z-index: 100;
   width: calc(100vw - 4px);
   height: calc(100vh - 4px);
   background-color: black;
